# dkim

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: canonicalization.rs  dkim.rs  email.rs  hash.rs  lib.rs  mail.txt  prelude.rs  public_key.rs  signature.rs  signing.rs  verification.rs  verifier.rs  verifying.rs
src/parsing/: dkim_quoted_printable.rs  dns_record.rs  header.rs  mod.rs  quoted_printable.rs  signature_header.rs  tag_value_list.rs
