[package]
name = "dkim"
description = "Complete DKIM library."
version = "0.1.1"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mubelotix/dkim"
keywords = ["email", "dkim", "smtp", "cryptography", "mail"]
categories = ["authentication", "cryptography", "email", "parsing"]

[dependencies]
email-parser = "0.1"
unicase = "2.6"
sha-1 = "0.9"
sha2 = "0.9"
base64 = "0.12"
prettydiff = "0.3"
rsa = "0.3"
string-tools = "0.1"
trust-dns-resolver = "0.19"
quoted_printable = "0.4"
nom = "5.1"

[dev-dependencies]
pretty_assertions = "0.6"